fix:add letter spacing title

--- a/practice-two/src/styles/pages/benefit.css
+++ b/practice-two/src/styles/pages/benefit.css
@@ -138,6 +138,7 @@
   .benefit-title {
     max-width: 486px;
     line-height: normal;
+    letter-spacing: normal;
   }
 
   .benefit-desc {
